System test iterators during query